--- a/app/assets/stylesheets/partials/_mobile.scss
+++ b/app/assets/stylesheets/partials/_mobile.scss
@@ -116,13 +116,5 @@
 
 
 	}
-
-	// log in before main cardagain app
-	.login_page {
-		.login_box {
-			width: 90%;
-			margin-left: 5%;
-			left: 0;
-		}
-	}
+	
 }
